fixed z-index for last sections

--- a/SCSS/layouts/_contacts-section.scss
+++ b/SCSS/layouts/_contacts-section.scss
@@ -1,5 +1,6 @@
 .contacts-section{
 position: relative;
+z-index: -2;
 background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(241,243,255,1) 65%, rgba(241,243,255,1) 100%);
 // z-index: -2;
     &__container{
