--- a/SCSS/layouts/_hero-section.scss
+++ b/SCSS/layouts/_hero-section.scss
@@ -25,7 +25,7 @@
     margin-bottom: 150px;
     position: relative;
     @media screen and (min-width: $bp-tablet){
-    margin-bottom: 249px;
+    margin-bottom: 149px;
     }
     
     &__icons{
