--- a/SCSS/layouts/_services-section.scss
+++ b/SCSS/layouts/_services-section.scss
@@ -50,7 +50,7 @@
     position: absolute;
     top: 0px;
     left: 0;
-    z-index: -1;
+    z-index: -2;
     max-width: 2920px;
     width: 100%;
     max-height: 500px;
